--- a/package.xml
+++ b/package.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>rLIDARMapping_HMI</name>
-  <version>0.0.0</version>
+  <name>LIDARMapping_HMI</name>
+  <version>0.1.0</version>
   <description>TODO: Package description</description>
   <maintainer email="n01671663@humber.ca">atmn-351</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
+  <depend>std_msgs</depend>
+  <depend>pluginlib</depend>
+  
+  
+  <build_depend>qt6-base-dev</build_depend>
+
+
+
+  <!-- Add additional dependencies here -->
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
