--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 4.2)
 
-project(LIDARMapping_HMI VERSION 0.1 LANGUAGES CXX)
+project(LIDAR_Mapping_HMI VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON) # Enforce C++23 support
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 # set(CMAKE_PREFIX_PATH "/opt/Qt/6.10.1/gcc_64")
-set(Qt6_DIR "/opt/Qt/6.10.1/gcc_64/lib/cmake/Qt6")
+set(Qt6_DIR "/opt/Qt/6.10.2/gcc_64/lib/cmake/Qt6")
 # Define the paths to the external library files
 set(EXTERNAL_LIB_DIR "lib")
 set(EXTERNAL_INC_DIR "include")
